--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/form.css" />
+    <style>
+      body {
+        visibility: hidden;
+      }
+    </style>
   </head>
 
   <body>
@@ -406,6 +411,12 @@
       // con esta función y jquery cargo otros archivos html, la forma que propongo que trabajemos con distintos archivos cada uno
       $(function () {
         $("#cards").load("cards.html");
+      });
+    </script>
+    <script>
+      window.addEventListener("load", () => {
+        // Cuando toda la página (incluidas imágenes) ha cargado
+        document.body.style.visibility = "visible";
       });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
