--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </li>
                 <li class="nav-item">
                   <a
-                    href="#proyectos"
+                    href="#cards"
                     class="nav-link select-nav text-decoration-none"
                   >
                     <p class="text-nav text-nav-dark fs-3 fw-medium m-0">
@@ -124,7 +124,7 @@
               </a>
             </li>
             <li>
-              <a href="#proyectos" class="select-nav text-decoration-none">
+              <a href="#cards" class="select-nav text-decoration-none">
                 <p class="text-nav text-nav-dark fs-3 fw-medium m-0">
                   Proyectos
                 </p>
