--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                     <div class="col-6">
                       <button
                         class="button type1 custom-animated-btn btn-info"
+                        onclick="document.getElementById('contacto').scrollIntoView({ behavior: 'smooth' });"
                       ></button>
                     </div>
                   </div>
@@ -322,7 +323,7 @@
     </section>
 
     <div id="cards"></div>
-    <footer class="custom-footer" id="contacto">
+    <footer class="custom-footer" id="contacto" style="margin-bottom: 3rem">
       <section class="py-5">
         <div class="container">
           <div class="row justify-content-center">
