--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
               class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#navbarTogglerMobile"
-              aria-controls="navbarTogglerMobile"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
+              data-bs-target="#navbarNav"
             >
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -409,7 +406,6 @@
       </div>
     </footer>
     <script type="text/javascript">
-      
       $(function () {
         $("#cards").load("cards.html");
       });
@@ -454,6 +450,23 @@
         );
       });
     </script>
+    <script>
+      document
+        .querySelector(".navbar-toggler")
+        .addEventListener("click", function () {
+          const navbarCollapse = document.querySelector("#navbarTogglerMobile");
+          const bsCollapse = new bootstrap.Collapse(navbarCollapse, {
+            toggle: false,
+          });
+
+          if (navbarCollapse.classList.contains("show")) {
+            bsCollapse.hide();
+          } else {
+            bsCollapse.show();
+          }
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
