--- a/cards.html
+++ b/cards.html
@@ -57,11 +57,32 @@
                       alt="HTML5"
                     />
                   </div>
+                  <div class="logo-hover">
+                    <img
+                      class="tech-logo"
+                      src="img_tecnologias/MySQL.svg"
+                      alt="MySQL"
+                    />
+                  </div>
+                  <div class="logo-hover">
+                    <img
+                      class="tech-logo"
+                      src="img_tecnologias/php.svg"
+                      alt="php"
+                    />
+                  </div>
+                  <div class="logo-hover">
+                    <img
+                      class="tech-logo"
+                      src="img_tecnologias/XAMPP.svg"
+                      alt="XAM"
+                    />
+                  </div>
                 </div>
               </div>
               <div class="mt-4">
                 <a
-                  href="https://github.com/LucasExeVargas/portfolio-lucas-vargas-php"
+                  href="https://github.com/LucasExeVargas/portafolio_lucasvargas"
                   class="btn btn-primary w-100 fw-bold"
                   target="_blank"
                 >
