--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 text-center"></div>
-          <div class="col-md-3">
-            <form id="contact-form" class="form">
+          <div class="col-12 col-md-3 mx-auto">
+            <form id="contact-form" class="form mx-auto" style="max-width: 100%;">
               <div class="flex">
                 <label>
                   <input name="firstname" required type="text" class="input" />
