--- a/index.html
+++ b/index.html
@@ -332,9 +332,13 @@
       </section>
       <div class="container">
         <div class="row">
-          <div class="col-md-3 text-center"></div>
+          <div class="col-md-3 d-none d-md-block"></div>
           <div class="col-12 col-md-3 mx-auto">
-            <form id="contact-form" class="form mx-auto" style="max-width: 100%;">
+            <form
+              id="contact-form"
+              class="form mx-auto"
+              style="max-width: 100%"
+            >
               <div class="flex">
                 <label>
                   <input name="firstname" required type="text" class="input" />
@@ -371,26 +375,26 @@
             </form>
           </div>
           <div
-            class="col-md-6 text-center d-flex justify-content-md-center align-items-md-center min-vh-md-100"
+            class="col-md-6 col-12 text-center d-flex justify-content-center align-items-center mt-4 mt-md-0"
           >
             <a
               href="https://wa.me/+5493875220380"
               target="_blank"
-              class="text-dark me-5"
+              class="text-dark me-4 me-md-5"
             >
               <i class="bi bi-whatsapp fs-2"></i>
             </a>
             <a
               href="https://github.com/LucasExeVargas"
               target="_blank"
-              class="text-dark me-5"
+              class="text-dark me-4 me-md-5"
             >
               <i class="bi bi-github fs-2"></i>
             </a>
             <a
               href="https://www.instagram.com/vargas.lucas___"
               target="_blank"
-              class="text-dark me-5"
+              class="text-dark me-4 me-md-5"
             >
               <i class="bi bi-instagram fs-2"></i>
             </a>
