--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/form.css" />
-    <link rel="stylesheet" href="styles/modal.css" />
+    <link rel="stylesheet" href="styles/cartel.css" />
     <style>
       body {
         visibility: hidden;
@@ -105,14 +105,11 @@
         <div
           class="header-container align-items-center justify-content-between"
         >
-          <!-- Logo -->
           <div class="column-1">
             <figure class="figure-nav m-0">
               <img src="img/logo-ar.svg" class="img-ar" alt="Logo AR" />
             </figure>
           </div>
-
-          <!-- Navigation Links -->
           <ul class="nav-list d-flex list-unstyled mb-0">
             <li>
               <a href="#sobremi" class="select-nav text-decoration-none">
@@ -136,8 +133,7 @@
               </a>
             </li>
           </ul>
-
-          <!-- Dark Mode Switch -->
+          <!--switch de temas-->
           <div class="column-3">
             <label class="switch">
               <input checked="true" id="checkbox" type="checkbox" />
@@ -263,6 +259,7 @@
         </div>
       </div>
     </section>
+
     <section class="container mt-5">
       <h1 class="text-center mb-5">Estudios</h1>
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -415,18 +412,18 @@
         $("#cards").load("cards.html");
       });
     </script>
-    <div id="agradecimiento-modal" class="modal-overlay">
-      <div class="modal-container">
-        <div class="modal-header">
+    <div id="agradecimiento-cartel" class="cartel-overlay">
+      <div class="cartel-container">
+        <div class="cartel-header">
           <h3>¡Gracias por contactarme!</h3>
-          <button class="modal-close" id="modal-close">&times;</button>
+          <button class="cartel-close" id="cartel-close">&times;</button>
         </div>
-        <div class="modal-body">
+        <div class="cartel-body">
           <p>He recibido tu mensaje correctamente.</p>
           <p>Me pondré en contacto contigo lo antes posible.</p>
         </div>
-        <div class="modal-footer">
-          <button class="modal-button" id="modal-ok">Aceptar</button>
+        <div class="cartel-footer">
+          <button class="cartel-button" id="cartel-ok">Aceptar</button>
         </div>
       </div>
     </div>
@@ -437,28 +434,28 @@
         document.body.style.visibility = "visible";
       });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    
     <script>
       emailjs.init("4pVh9yp4Fi30cNVsA");
 
       const form = document.getElementById("contact-form");
-      const modal = document.getElementById("agradecimiento-modal");
-      const closeBtn = document.getElementById("modal-close");
-      const okBtn = document.getElementById("modal-ok");
+      const cartel = document.getElementById("agradecimiento-cartel");
+      const closeBtn = document.getElementById("cartel-close");
+      const okBtn = document.getElementById("cartel-ok");
 
-      // Función para cerrar el modal
-      function closeModal() {
-        modal.classList.remove("show");
+      // Función para cerrar el cartel
+      function closeCartel() {
+        cartel.classList.remove("show");
       }
 
-      // Eventos para cerrar el modal
-      closeBtn.addEventListener("click", closeModal);
-      okBtn.addEventListener("click", closeModal);
+      // Eventos para cerrar el cartel
+      closeBtn.addEventListener("click", closeCartel);
+      okBtn.addEventListener("click", closeCartel);
 
-      // También cerrar el modal si se hace clic fuera de él
+      // También cerrar el cartel si se hace clic fuera de él
       window.addEventListener("click", function (event) {
-        if (event.target === modal) {
-          closeModal();
+        if (event.target === cartel) {
+          closeCartel();
         }
       });
 
@@ -468,7 +465,6 @@
         const submitButton = form.querySelector('button[type="submit"]');
         const originalText = submitButton.querySelector(".text");
         const originalContent = originalText.textContent;
-
         // Bloquear y mostrar "Procesando..."
         submitButton.disabled = true;
         submitButton.classList.add("disabled");
@@ -476,9 +472,7 @@
 
         emailjs.sendForm("service_k1ewwe6", "template_yf8abgr", form).then(
           () => {
-            // Mostrar el modal en lugar del alert
-            modal.classList.add("show");
-
+            cartel.classList.add("show");
             // Resetear el formulario
             form.reset();
             submitButton.disabled = false;
@@ -494,6 +488,7 @@
         );
       });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script
